crates/cli/src/commands/snapshots/cli__commands__init__tests__init_interactive_blank_edits_preserve_existing_defaults_config.snap
---
source: crates/cli/src/commands/init.rs
expression: "read_file(&project.join(\"pv.yml\"))?"
---
php: '8.3'
root: public
env:
  APP_URL: ${project_url}
  VITE_DEV_SERVER_CERT: ${tls.cert}
  VITE_DEV_SERVER_KEY: ${tls.key}
mailpit:
  version: '1.0'
  env:
    MAIL_HOST: ${smtp_host}
    MAIL_MAILER: smtp
    MAIL_PORT: ${smtp_port}
mysql:
  version: '8.4'
  allocations:
    primary:
      env:
        DB_CONNECTION: mysql
        DB_DATABASE: ${database}
        DB_HOST: ${host}
        DB_PASSWORD: ${password}
        DB_PORT: ${port}
        DB_USERNAME: ${username}
redis:
  version: '7.2'
  allocations:
    sessions:
      env:
        REDIS_HOST: ${host}
        REDIS_PORT: ${port}
        REDIS_PREFIX: ${prefix}
rustfs:
  version: '1.1'
  allocations:
    media:
      env:
        AWS_ACCESS_KEY_ID: ${access_key}
        AWS_BUCKET: ${bucket}
        AWS_ENDPOINT: ${endpoint}
        AWS_SECRET_ACCESS_KEY: ${secret_key}
