crates/cli/src/commands/snapshots/cli__commands__init__tests__init_interactive_explicit_allocation_edits_preserve_retained_allocation_config_config.snap
---
source: crates/cli/src/commands/init.rs
expression: config
---
php: '8.3'
root: public
env:
  APP_URL: ${project_url}
  VITE_DEV_SERVER_CERT: ${tls.cert}
  VITE_DEV_SERVER_KEY: ${tls.key}
mailpit:
  version: latest
  env:
    MAIL_HOST: ${smtp_host}
    MAIL_MAILER: smtp
    MAIL_PORT: ${smtp_port}
mysql:
  version: '8.4'
  allocations:
    app:
      env:
        APP_DB_CONNECTION: mysql
        APP_DB_DATABASE: ${database}
        APP_DB_HOST: ${host}
        APP_DB_PASSWORD: ${password}
        APP_DB_PORT: ${port}
        APP_DB_USERNAME: ${username}
    primary:
      env:
        CUSTOM_PRIMARY: preserved
        DB_CONNECTION: mysql
        DB_DATABASE: ${database}
        DB_HOST: custom.internal
        DB_PASSWORD: ${password}
        DB_PORT: ${port}
        DB_USERNAME: ${username}
redis:
  version: latest
  allocations:
    cache:
      env:
        REDIS_HOST: ${host}
        REDIS_PORT: ${port}
        REDIS_PREFIX: ${prefix}
rustfs:
  version: latest
  allocations:
    uploads:
      env:
        AWS_ACCESS_KEY_ID: ${access_key}
        AWS_BUCKET: ${bucket}
        AWS_ENDPOINT: ${endpoint}
        AWS_SECRET_ACCESS_KEY: ${secret_key}
