crates/cli/src/commands/snapshots/cli__commands__init__tests__init_interactive_initial_cancel_leaves_new_project_unchanged.snap
---
source: crates/cli/src/commands/init.rs
expression: output
---
Detected Project signals:
  Laravel: Detected composer.json, artisan, and Laravel project files
  Vite: Detected Vite in package.json
Selected Project resources:
  mailpit: Detected SMTP mail env keys when selected
  mysql: Detected DB_CONNECTION=mysql
  redis: Detected Redis-compatible env keys when selected
  rustfs: Detected AWS/S3 env keys when selected
Resource checklist:
  [x] MySQL
  [ ] Postgres
  [x] Redis
  [x] Mailpit
  [x] RustFS/S3
Use these selections? Enter y to preview, n to cancel, or edit to change selections:
pv init cancelled; no files changed.
